@@ -7,7 +7,10 @@
 
 #define NUM_HBL_IMPORTS 0x28
 
-// 64 kB should be enough :P
-#define MAX_ELOADER_SIZE 0x10000
+// 32 kB should be enough :P
+// Eternal computing dilemma: there's never enough xD
+// Set to 64 KiB
+// Removed intermediate buffer, ab5000's allocation works just fine
+// #define MAX_ELOADER_SIZE 0x10000
 
 #endif
